# insurance-server-utilization-agent

./: .gitignore  PRD-ai-server-utilization-agent.md  README.md  pyproject.toml
configs/: example-config.grafana.json  example-config.mock.json  example-servers.txt  example-servers.xlsx  mock-metrics.json  server-costs.csv
docs/: app.js  index.html  styles.css
docs/data/: sample-report.json
src/server_utilization_agent/: __init__.py  agent.py  analyzer.py  cli.py  config.py  costs.py  grafana.py  models.py  reporter.py  spreadsheet.py
tests/: test_agent_mock_flow.py  test_analyzer.py  test_spreadsheet.py
