[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "server-utilization-agent"
version = "0.1.0"
description = "Configurable server utilization agent for Grafana-based infrastructure reviews"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
